20-apps/monitoring/grafana-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.k8s.lab`)
    kind: Rule
    services:
    - kind: Service
      name: grafana
      namespace: monitoring
      port: 3000
  tls:
    secretName: grafana.k8s.lab
  tls:
    secretName: grafana.k8s.lab
