20-apps/monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.k8s.lab`)
    services:
    - kind: Service
      name: grafana
      namespace: monitoring
      port: 3000
  tls:
    secretName: kubernetes.k8s.lab
